# ice-modules

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  main.rc  makefile
ice/: example.cpp  ice.cpp
ice/example/: format.cpp  modify.cpp
